[package]
name = "pqc-combo-notary"
version = "0.0.1"
edition = "2021"
description = "Official pqc-combo-notary library. Integrates the pqc-combo library."
license = "MIT"
authors = ["Aaron Schnacky <aaronschnacky@gmail.com>"]
homepage = "https://www.pqc-combo.com/"
repository = "https://github.com/aaronschnacky/pqc-combo-notary"